Added custom html file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <h1>Hello There</h1>
 <p>This is my test application git</p>
 <p>Modifying the file to check</p>
+<p>vhdcdvbvbdv hvbashbdhjbhjfbjsd bvhjbsddvhjb
+hdbhbfhbdhgdbjnuinb jbniudf bibfjd bbfjh
+hbjhfg hdbfhgngjhfjgjnbvbvdjfbkj dffbhdbfgjbhjhv hjdbfg</p>
